# osc

./: README.md
Project1/: Makefile  Makefile.in  ReadMe.txt  config.status  configure  configure.ac  readme
Project1/src/: Makefile  Makefile.am  Makefile.in  cpu.c  main  main.c  memory.c  sample5.txt  test.txt
Project1/src/.deps/: cpu.Po  main.Po  memory.Po
Project2/: Makefile  Makefile.in  config.h  config.status  configure  configure.ac  design.html  design.org  readme.txt
Project2/src/: Makefile  Makefile.am  Makefile.in  common.h  main.c
Project2/src/.deps/: main.Po
